--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
+    font-family: 'Arvo', serif;
 }
 
 header {
@@ -15,6 +17,59 @@ header {
 }
 
 .container {
-    max-width: 860px;
+    max-width: 960px;
     margin: 0 auto;
+}
+
+.video-container {
+    max-width: 710px;
+    margin: 0 auto;
+}
+
+.video-title {
+    background-color: #af2024;
+    width: 100%;
+    color: #fff;
+    font-size: 20px;
+    font-weight: bold;
+    padding: 20px 15px;
+}
+
+.video-body {
+    padding: 60px 70px;
+    background-color: #fff;
+    margin: 0 auto;
+    width: 100%;
+}
+
+.video-block {
+    max-width: 565px;
+    background-color: #e7e7e7;
+    height: 345px;
+}
+
+.text-red {
+    color: #98161b;
+}
+
+.text-red.text-red-capation {
+    font-size: 13px;
+    font-weight: bold;
+    padding-top: 27px;
+}
+
+.text-date {
+    color: #7d7d7d;
+    font-size: 13px;
+}
+
+.splitter {
+    max-width: 50px;
+    border-bottom: 2px dotted #98161b;
+    margin-top: 15px;
+    margin-bottom: 15px;
+}
+
+.text-red.text-red-body {
+    font-size: 12px;
 }
