--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 }
 
 header {
-    background-color: #af2024;
+    background-color: #98161b;
     height: 40px;
 }
 
@@ -14,16 +14,23 @@ header {
     background-image: url(img/pizza-background.png);
     height: 820px;
     width: 100%;
+    border-bottom: 30px solid #3f0002;
 }
 
 .container {
     max-width: 960px;
     margin: 0 auto;
+    position: relative;
+}
+
+.video-container-position {
+    position: absolute;
 }
 
 .video-container {
     max-width: 710px;
     margin: 0 auto;
+    position: relative;
 }
 
 .video-title {
@@ -40,12 +47,14 @@ header {
     background-color: #fff;
     margin: 0 auto;
     width: 100%;
+    padding-bottom: 140px;
 }
 
 .video-block {
     max-width: 565px;
     background-color: #e7e7e7;
     height: 345px;
+    position: relative;
 }
 
 .text-red {
@@ -72,4 +81,64 @@ header {
 
 .text-red.text-red-body {
     font-size: 12px;
+}
+
+.play-btn:before {
+    content: "";
+    display: inline-block;
+    width: 0px;
+    height: 0px;
+    border-top: 30px solid transparent;
+    border-left: 44px solid #98161b;
+    border-bottom: 30px solid transparent;
+    position: absolute;
+    top: calc(50% - 22px);
+    left: calc(50% - 15px);
+}
+
+footer {
+    background-color: #000000;
+    height: 445px;
+}
+
+.logo {
+    display: inline-block;
+    margin-top: 15px;
+}
+
+.social-menu-item {
+    width: 50px;
+    height: 50px;
+    font-family: "Font Awesome 5 Brands";
+    display: block;
+    text-decoration: none;
+}
+
+.social-menu {
+    position: absolute;
+    right: 0;
+    top: 220px;
+    text-align: center;
+}
+
+.social-menu-item.fb {
+    background-color: #850409;
+}
+
+.social-menu-item.fb:before {
+    content: '\f39e';
+    color: #fff;
+    line-height: 50px;
+    font-size: 20px;
+}
+
+.social-menu-item.tw {
+    background-color: #98161b;
+}
+
+.social-menu-item.tw:before {
+    content: '\f099';
+    color: #fff;
+    line-height: 50px;
+    font-size: 20px;
 }
